fix: visibility & add placeholder

--- a/packages/react/src/component/recommend_input/style.less
+++ b/packages/react/src/component/recommend_input/style.less
@@ -2,7 +2,7 @@
   position: relative;
 
   .gm-recommend-input-clear-btn {
-    display: none;
+    visibility: hidden;
     position: absolute;
     right: 5px;
     top: 8px;
@@ -11,7 +11,7 @@
 
   &:hover {
     .gm-recommend-input-clear-btn {
-      display: block;
+      visibility: visible;
     }
   }
 
